// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraftJS Plugins render bold text 1`] = `
<div
  className="DraftEditor-root"
>
  <div
    className="DraftEditor-editorContainer"
  >
    <div
      aria-activedescendant={undefined}
      aria-autocomplete={undefined}
      aria-controls={undefined}
      aria-describedby={null}
      aria-expanded={null}
      aria-label={undefined}
      aria-multiline={undefined}
      autoCapitalize={undefined}
      autoComplete={undefined}
      autoCorrect={undefined}
      className="notranslate public-DraftEditor-content"
      contentEditable={true}
      data-testid={undefined}
      onBeforeInput={[Function]}
      onBlur={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onCopy={[Function]}
      onCut={[Function]}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      onSelect={[Function]}
      role="textbox"
      spellCheck={false}
      style={
        Object {
          "WebkitUserSelect": "text",
          "outline": "none",
          "userSelect": "text",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
      suppressContentEditableWarning={true}
      tabIndex={undefined}
    >
      <div
        data-contents="true"
      >
        <div
          className=""
          data-block={true}
          data-editor="123"
          data-offset-key="123-0-0"
        >
          <div
            className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
            data-offset-key="123-0-0"
          >
            <span
              data-offset-key="123-0-0"
              style={Object {}}
            >
              <span
                data-text="true"
              >
                this is 
              </span>
            </span>
            <span
              data-offset-key="123-0-1"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              <span
                data-text="true"
              >
                bold
              </span>
            </span>
            <span
              data-offset-key="123-0-2"
              style={Object {}}
            >
              <span
                data-text="true"
              >
                 text
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DraftJS Plugins render link found in text 1`] = `
<div
  className="DraftEditor-root"
>
  <div
    className="DraftEditor-editorContainer"
  >
    <div
      aria-activedescendant={undefined}
      aria-autocomplete={undefined}
      aria-controls={undefined}
      aria-describedby={null}
      aria-expanded={null}
      aria-label={undefined}
      aria-multiline={undefined}
      autoCapitalize={undefined}
      autoComplete={undefined}
      autoCorrect={undefined}
      className="notranslate public-DraftEditor-content"
      contentEditable={true}
      data-testid={undefined}
      onBeforeInput={[Function]}
      onBlur={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onCopy={[Function]}
      onCut={[Function]}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      onSelect={[Function]}
      role="textbox"
      spellCheck={false}
      style={
        Object {
          "WebkitUserSelect": "text",
          "outline": "none",
          "userSelect": "text",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
      suppressContentEditableWarning={true}
      tabIndex={undefined}
    >
      <div
        data-contents="true"
      >
        <div
          className=""
          data-block={true}
          data-editor="123"
          data-offset-key="123-0-0"
        >
          <div
            className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
            data-offset-key="123-0-0"
          >
            <span
              data-offset-key="123-0-0"
              style={Object {}}
            >
              <span
                data-text="true"
              >
                this is a url 
              </span>
            </span>
            <span
              data-offset-key="123-0-1"
              style={Object {}}
            >
              <span
                data-text="true"
              >
                link
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DraftJS Plugins render simple text 1`] = `
<div
  className="DraftEditor-root"
>
  <div
    className="DraftEditor-editorContainer"
  >
    <div
      aria-activedescendant={undefined}
      aria-autocomplete={undefined}
      aria-controls={undefined}
      aria-describedby={null}
      aria-expanded={null}
      aria-label={undefined}
      aria-multiline={undefined}
      autoCapitalize={undefined}
      autoComplete={undefined}
      autoCorrect={undefined}
      className="notranslate public-DraftEditor-content"
      contentEditable={true}
      data-testid={undefined}
      onBeforeInput={[Function]}
      onBlur={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onCopy={[Function]}
      onCut={[Function]}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      onSelect={[Function]}
      role="textbox"
      spellCheck={false}
      style={
        Object {
          "WebkitUserSelect": "text",
          "outline": "none",
          "userSelect": "text",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
      suppressContentEditableWarning={true}
      tabIndex={undefined}
    >
      <div
        data-contents="true"
      >
        <div
          className=""
          data-block={true}
          data-editor="123"
          data-offset-key="123-0-0"
        >
          <div
            className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
            data-offset-key="123-0-0"
          >
            <span
              data-offset-key="123-0-0"
              style={Object {}}
            >
              <span
                data-text="true"
              >
                this is only text, no style
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
